--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vinum</title>
+  <title>Vinum Wine Bar | Fremont, CA</title>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
