fixed homepage links

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css">
-    <base href="/" />
-
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
@@ -17,9 +15,15 @@
     <h1>Vinum Wine Bar</h1>
 
     <nav>
-      <a href="/wine.html">Wine</a>
-      <a href="/food.html">Food</a>
-      <a href="/drinks.html">Drinks</a>
+      <a href="https://jadeallencook.github.io/Vinum-Wine-Bar/wine.html"
+        >Wine</a
+      >
+      <a href="https://jadeallencook.github.io/Vinum-Wine-Bar/food.html"
+        >Food</a
+      >
+      <a href="https://jadeallencook.github.io/Vinum-Wine-Bar/drinks.html"
+        >Drinks</a
+      >
     </nav>
 
     <footer>
