--- a/food.html
+++ b/food.html
@@ -16,5 +16,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="./food.js"></script>
+  <script src="https://jadeallencook.github.io/Vinum-Wine-Bar/food.js"></script>
 </html>
