--- a/wine.html
+++ b/wine.html
@@ -16,5 +16,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="./wines.js"></script>
+  <script src="https://jadeallencook.github.io/Vinum-Wine-Bar/wines.js"></script>
 </html>
